Resultの動的更新に対応